--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.45.1",
     "@tiptap/core": "^2.6.4",
+    "@tiptap/extension-bold": "^2.6.6",
+    "@tiptap/extension-italic": "^2.6.6",
+    "@tiptap/extension-paragraph": "^2.6.6",
+    "@tiptap/extension-text": "^2.6.6",
     "@tiptap/pm": "^2.6.4",
-    "@tiptap/react": "^2.6.4",
-    "@tiptap/starter-kit": "^2.6.4",
+    "@tiptap/react": "^2.6.6",
+    "@tiptap/starter-kit": "^2.6.6",
     "axios": "^1.7.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
